After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 710580 - Unable to select more than 1 folder to share
Unable to select more than 1 folder to share
Status: RESOLVED FIXED
Product: gnome-control-center
Classification: Core
Component: Sharing
3.10.x
Other Linux
: Normal major
: ---
Assigned To: Control-Center Maintainers
Control-Center Maintainers
: 723406 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2013-10-21 19:53 UTC by Luis Henrique Mello
Modified: 2014-02-01 12:06 UTC
See Also:
GNOME target: ---
GNOME version: ---



Description Luis Henrique Mello 2013-10-21 19:53:53 UTC
Description:
User is unable to select more than 1 folder to share in System -> Sharing preferences.

Steps to reproduce:
Turn on 'Media Sharing' on 'Sharing' preferences. One can select only one folder to share - nothing happens upon adding a second folder.
Comment 1 Luis Henrique Mello 2013-11-14 03:29:41 UTC
A fellow Arch Linux user has confirmed this bug: https://bugs.archlinux.org/task/37413
Comment 2 Bastien Nocera 2013-11-14 08:28:27 UTC
commit 53391fedbca372b94893a964d1b0cb9fa3ccb567
Author: Bastien Nocera <hadess@hadess.net>
Date:   Thu Nov 14 09:25:30 2013 +0100

    sharing: Make it possible to add new folders
    
    The media panel wouldn't let you add more folder because the
    test for equality was reversed.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=710580
Comment 3 Bastien Nocera 2014-02-01 11:59:50 UTC
*** Bug 723406 has been marked as a duplicate of this bug. ***
Comment 4 Asif Ali Rizvan 2014-02-01 12:06:06 UTC
so, Will there be a bug fix release for gnome 3.10 series? Cause in fedora 20, I'm still having this bug!