sharing: Make it possible to add new folders

The media panel wouldn't let you add more folder because the
test for equality was reversed.

https://bugzilla.gnome.org/show_bug.cgi?id=710580